aarch64: hotspot test compiler/codegen/7184394/TestAESMain.java fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • Environment:

      aarch64 development board

    • b66
    • arm
    • linux

        Hotspot test compiler/codegen/7184394/TestAESMain.java fails fails on aarch64 with the error

        java.lang.IllegalArgumentException: Bad arguments

        This is due to it returning the incorect length from generate_cipherBlockChaining_encryptAESCrypt

        I have a patch in preparation which I will submit for review shortly.

              Assignee:
              Ed Nevill
              Reporter:
              Ed Nevill
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved:

                  Estimated:
                  Original Estimate - 1 day
                  1d
                  Remaining:
                  Remaining Estimate - 1 day
                  1d
                  Logged:
                  Time Spent - Not Specified
                  Not Specified