8080586: aarch64: hotspot test compiler/codegen/7184394/TestAESMain.java fails Summary: Return correct length in generate_cipherBlockChaining_encryptAESCrypt